# yp_ambassador_crm

./: .gitignore  Dockerfile  README.md  env_example  pyproject.toml
.github/workflows/: crm_app.yml
app_frontend/index_f/: index.html
app_frontend/index_f/assets/: index-BrCsaOvG.js  index-I8QMqsM3.css
backend/ambassadors/: admin.py  models.py  validators.py
backend/ambassadors/migrations/: 0001_initial.py  0002_alter_ambassadors_status.py  0002_alter_content_content_type.py  0002_initial.py  0003_alter_studyprogramm_options.py  0003_alter_studyprogramm_title.py  0003_studyprogramm_alter_ambassadors_supervisor_and_more.py  0004_alter_ambassadors_address_alter_ambassadors_city_and_more.py  0004_alter_ambassadors_phone.py  0004_alter_studyprogramm_title.py  0005_alter_ambassadors_date_created.py  0005_alter_ambassadors_phone.py  0006_alter_ambassadors_date_created_and_more.py  0007_alter_ambassadors_phone.py  0008_ambassadors_contact_preferences_and_more.py
backend/api/: filters.py  paginator.py  serializers.py  tasks.py  urls.py  views.py
backend/backend/: __init__.py  celery.py  settings.py  urls.py
backend/merch/: admin.py  apps.py  filters.py  models.py  serializers.py  signal.py  urls.py  views.py
backend/merch/migrations/: 0001_initial.py  0002_alter_budget_options.py  0002_alter_merchforsend_count.py  0003_alter_merchforsend_merch.py  0004_alter_merchforsend_merch.py
backend/tests/: conftest.py
backend/tests/test_ambassadors/: test_models.py
backend/tests/test_api/: test_ambassadors_serializers.py  test_serializers.py  test_views.py
backend/users/: admin.py  models.py  validators.py
backend/users/migrations/: 0001_initial.py  0002_alter_crmuser_email_alter_crmuser_name_and_more.py
docs/: API_CRM_Ambassador.yaml  CRMYandexAmbassadorAPI.yaml  Sequence Diagrams.docx  UseCase Амбассадор.docx  openapi.json  ~$ CRM для Яндекс.docx  Бриф CRM.docx  Модель данных.docx  ТЗ CRM для Яндекс.docx  ФТ и НФТ для Яндекса.docx
frontend/: Dockerfile
frontend/result_build/index_f/: index.html
frontend/result_build/index_f/assets/: index-DQWUkWSl.css  index-VYwQd49K.js
infra/: docker-compose.yaml  nginx.conf
