[tool.poetry]
name = "yp_ambassador_crm"
version = "0.1.0"
description = ""
authors = ["Constantine Nazarov <m-end-eleev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
amqp==5.2.0
asgiref==3.7.2
async-timeout==4.0.3
billiard==4.2.0
build==1.0.3
CacheControl==0.13.1
celery==5.3.6
certifi==2024.2.2
cffi==1.16.0
chardet==5.2.0
charset-normalizer==3.3.2
cleo==2.1.0
click==8.1.7
click-didyoumean==0.3.0
click-plugins==1.1.1
click-repl==0.3.0
colorama==0.4.6
coverage==7.4.3
crashtest==0.4.1
cron-descriptor==1.4.3
cryptography==42.0.5
defusedxml==0.7.1
distlib==0.3.8
Django==4.2.11
django-celery-beat==2.6.0
django-cors-headers==4.3.1
django-dbbackup==4.1.0
django-filter==23.5
django-templated-mail==1.1.1
django-timezone-field==6.1.0
djangorestframework==3.14.0
djangorestframework-simplejwt==5.3.1
djoser==2.2.2
drf-extra-fields==3.7.0
drf-yasg==1.21.7
dulwich==0.21.7
et-xmlfile==1.1.0
exceptiongroup==1.2.0
Faker==12.0.1
fastjsonschema==2.19.1
filelock==3.13.1
filetype==1.2.0
flake8==6.1.0
gunicorn==21.2.0
idna==3.6
importlib-metadata==7.0.1
inflection==0.5.1
iniconfig==2.0.0
installer==0.7.0
jaraco.classes==3.3.1
keyring==24.3.0
kombu==5.3.5
lazy-object-proxy==1.10.0
lml==0.1.0
mccabe==0.7.0
mixer==7.2.2
more-itertools==10.2.0
msgpack==1.0.7
numpy==1.26.4
oauthlib==3.2.2
openpyxl==3.1.2
packaging==24.0
pandas==2.2.1
pexpect==4.9.0
pkginfo==1.9.6
platformdirs==3.11.0
pluggy==1.4.0
poetry==1.7.1
poetry-core==1.8.1
poetry-plugin-export==1.6.0
prompt-toolkit==3.0.43
psycopg2-binary==2.9.9
ptyprocess==0.7.0
pycodestyle==2.11.1
pycparser==2.21
pyexcel==0.7.0
pyexcel-io==0.6.6
pyexcel-webio==0.1.4
pyflakes==3.1.0
PyJWT==2.8.0
pyproject_hooks==1.0.0
pytest==7.4.4
pytest-assert-utils==0.3.1
pytest-common-subject==1.0.6
pytest-cov==4.1.0
pytest-django==4.8.0
pytest-drf==1.1.3
pytest-fixture-order==0.1.4
pytest-lambda==1.3.0
python-crontab==3.0.0
python-dateutil==2.9.0.post0
python-dotenv==1.0.1
python3-openid==3.2.0
pytz==2024.1
pywin32-ctypes==0.2.2
PyYAML==6.0.1
rapidfuzz==3.6.1
redis==5.0.2
requests==2.31.0
requests-oauthlib==1.3.1
requests-toolbelt==1.0.0
shellingham==1.5.4
six==1.16.0
social-auth-app-django==5.4.0
social-auth-core==4.5.3
sqlparse==0.4.4
texttable==1.7.0
tomli==2.0.1
tomlkit==0.12.3
trove-classifiers==2024.2.22
typing_extensions==4.10.0
tzdata==2024.1
uritemplate==4.1.1
urllib3==2.2.1
vine==5.1.0
virtualenv==20.25.1
wcwidth==0.2.13
wrapt==1.16.0
XlsxWriter==3.2.0
xlwt==1.3.0
zipp==3.17.0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
